product catalogue rpc done
